feat: Implement analytics dashboard and logging for swap transactions
- Added AnalyticsPage component for displaying swap records and platform statistics.
- Created API routes for logging swaps and fetching swap records.
- Implemented middleware for wallet verification and access control.
- Developed PlatformStats component to show real-time performance metrics.
- Integrated Supabase for data storage and retrieval of swap records.
- Established database schema for swap records and platform statistics.
- Added error handling and loading states for better user experience.
- Created login page for wallet connection with access control based on allowlist.
- Implemented cookie management for connected wallet sessions.

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,18 +1,37 @@
-# FrenzySwap Environment Variables
-# Copy this file to .env.local and fill in your values
+# FrenzySwap Environment Variables Template
+# Copy this to .env.local and fill in your values
 
 # RPC Configuration
-# Start with free tier, upgrade when needed
 NEXT_PUBLIC_RPC_URL=https://api.mainnet-beta.solana.com
-
-# Optional: Paid RPC providers (uncomment when ready)
-# NEXT_PUBLIC_RPC_URL=https://YOUR-ENDPOINT.solana-mainnet.quiknode.pro/YOUR-TOKEN/
-# NEXT_PUBLIC_RPC_URL=https://mainnet.helius-rpc.com/?api-key=YOUR-API-KEY
+# Upgrade to paid RPC when needed:
 # NEXT_PUBLIC_RPC_URL=https://solana-mainnet.g.alchemy.com/v2/YOUR-API-KEY
 
 # Revenue Configuration
 NEXT_PUBLIC_REFERRAL_ACCOUNT=YOUR-FRENZY-WALLET-ADDRESS
 NEXT_PUBLIC_MEME_TOKEN_ADDRESS=94fzsMkuHAuFP4J8iMZS43euWr2CLtuvwLgyjPHyqcnY
 
-# Analytics (Optional)
+# Beta Access Control
+NEXT_PUBLIC_ALLOWED_WALLETS=wallet1,wallet2,wallet3
+NEXT_PUBLIC_ADMIN_WALLETS=founder_wallet,dev_wallet
+
+# Fee Collection Wallets
+NEXT_PUBLIC_FEE_USDC=your_usdc_fee_wallet
+NEXT_PUBLIC_FEE_MEME=your_meme_fee_wallet
+NEXT_PUBLIC_FEE_USDT=your_usdt_fee_wallet
+NEXT_PUBLIC_FEE_WIF=your_wif_fee_wallet
+NEXT_PUBLIC_FEE_JUP=your_jup_fee_wallet
+NEXT_PUBLIC_FEE_BONK=your_bonk_fee_wallet
+NEXT_PUBLIC_FEE_MSOL=your_msol_fee_wallet
+NEXT_PUBLIC_FEE_WSOL=your_wsol_fee_wallet
+
+# Phase 2: Analytics System (Optional)
+# Uncomment and configure when ready to enable analytics
+# NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+# NEXT_PUBLIC_ANALYTICS_AUTHORIZED_WALLETS=founder_wallet,analytics_team
+
+# Development Only (DO NOT COMMIT REAL VALUES)
+# PRIVATE_KEY=[your,private,key,array]
+
+# Optional: Google Analytics
 # NEXT_PUBLIC_GOOGLE_ANALYTICS=G-XXXXXXXXXX
