--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ next-env.d.ts
 .env.development.local
 .env.test.local
 .env.production.local
+# Note: .env.example and .env.local.example should be tracked (templates for developers)
 
 # Parcel cache
 .cache
