--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.2",
+    "@supabase/supabase-js": "^2.52.1",
     "@types/node": "^18.17.19",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
