--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "10.12.16",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
+    "mongodb": "^6.18.0",
     "next": "13.4.19",
     "next-pwa": "^5.6.0",
     "pino-pretty": "^13.0.0",
